# ai-agent-test

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/agent/: graph.py  guards.py  nodes.py  state.py
src/cli/: chat.py
src/config/: settings.py
src/llm/: ollama_client.py
src/memory/: chat_history.py  vector_store.py
src/tools/: registry.py  sql_detector.py  sql_validator.py
tests/: test_sql_guardrail.py  test_sql_validator.py
