[project]
name = "ai-agent-template"
version = "0.1.0"
description = "Minimal AI agent template using LangGraph and Ollama"
requires-python = ">=3.12"
dependencies = [
    # LangGraph ecosystem
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",

    # LLM provider
    "langchain-ollama>=0.1.0",

    # SQL parsing and validation
    "sqlparse>=0.5.0",

    # Configuration
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",

    # CLI interface
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
